<resources>
    <string name="app_name">HeliwayMod</string>
    <string name="eula_title">License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="screen_welcome">Enter your Rovio\'s network settings in the \"Settings\" menu to connect</string>
    <string name="screen_connecting">连接中</string>
    <string name="screen_connectfailheader_noresponse">等待遥控车响应</string>
    <string name="screen_connectfailtext_noresponse">正在与遥控车建立连接中。。。</string>
    <string name="screen_connectfailheader_dns">UNKNOWN HOST</string>
    <string name="screen_connectfailtext_dns">Double check the appropriate URL entry in the \"Network Settings\" menu</string>
    <string name="screen_connectfailheader_401">INVALID CREDENTIALS</string>
    <string name="screen_connectfailtext_401">Double check your username and password in the \"Network Settings\" menu</string>
    <string name="statetext_default">AndRovio Ready</string>
    <string name="statetext_docked">Docked</string>
    <string name="statetext_nonavsignal">No Nav Signal</string>
    <string name="statetext_lownavsignal">Low Nav Signal</string>
    <string name="statetext_roaming">Roaming</string>
    <string name="statetext_drivinghome">Driving Home</string>
    <string name="statetext_goinghome">Going Home</string>
    <string name="statetext_followingpath">Following Path</string>
    <string name="statetext_recordingpath">Recording Path</string>
    <string name="statetext_savinghome">保存返航点</string>
    <string name="commandtext_rotateleft">左转</string>
    <string name="commandtext_rotateright">右转</string>
    <string name="commandtext_forward">前进</string>
    <string name="commandtext_reverse">后退</string>
    <string name="commandtext_left">向左</string>
    <string name="commandtext_right">向右</string>
    <string name="commandtext_left45">向左旋转 45 度</string>
    <string name="commandtext_right45">向右旋转 45 度</string>
    <string name="commandtext_left90">向左旋转 90 度</string>
    <string name="commandtext_right90">向右旋转 90 度</string>
    <string name="commandtext_left135">向左旋转 135 度</string>
    <string name="commandtext_right135">向右旋转 135 度</string>
    <string name="commandtext_right180">掉头180度</string>
    <string name="commandtext_cameraup">CHANGE HEAD POSITION (UP)</string>
    <string name="commandtext_cameraupincrement">INCREMENT HEAD POSITION (UP)</string>
    <string name="commandtext_cameramiddle">CHANGE HEAD POSITION (MIDDLE)</string>
    <string name="commandtext_cameramiddleincrement">INCREMENT HEAD POSITION (DOWN)</string>
    <string name="commandtext_cameradown">CHANGE HEAD POSITION (DOWN)</string>
    <string name="commandtext_headlighton">TURN HEADLIGHT ON</string>
    <string name="commandtext_headlightoff">TURN HEADLIGHT OFF</string>
    <string name="commandtext_snapshot">E-MAIL SNAPSHOT</string>
    <string name="commandtext_snapshotbooster">E-MAIL SNAPSHOT (WITH BOOSTER)</string>
    <string name="commandtext_snapshotmedia">SAVING SNAPSHOT</string>
    <string name="commandtext_snapshotmediabooster">SAVING SNAPSHOT (WITH BOOSTER)</string>
    <string name="commandtext_runpath">RUN PATH</string>
    <string name="commandtext_sethome">SAVE HOME POSITION</string>
    <string name="commandtext_homedock">GO HOME AND DOCK</string>
    <string name="dialogbutton_ok">OK</string>
    <string name="dialogbutton_cancel">Cancel</string>
    <string name="dialogbutton_yes">Yes</string>
    <string name="dialogbutton_no">No</string>
    <string name="about_label">About</string>
    <string name="help_label">Help</string>
    <string name="sethome_label">Set Home</string>
    <string name="settings_label">Settings</string>
    <string name="dialog_about_title">AndRovio</string>
    <string name="dialog_about_url">http://poignantprojects.blogspot.com</string>
    <string name="dialog_about_email">poignantprojects@gmail.com</string>
    <string name="dialog_about_content1">AndRovio (c) Copyright Poignant Projects 2008-2011. All rights reserved. (Not affiliated with WowWee Group Ltd.)</string>
    <string name="dialog_about_content2">Rovio(tm) Mobile Webcam (c) Copyright 2008-2011 WowWee Group Ltd. All rights reserved.</string>
    <string name="dialog_about_content3">Privacy Policy - AndRovio collects the following information while running: The app version, Android version, device type, screen size, and screen density. None of this information can be used to personally identify you, and is strictly used by Poignant Projects to improve the experience of the application. If you would prefer not to participate in sending data to help improve AndRovio, you can opt out by un-checking the \"Usage Statistics\" option in Settings.</string>
    <string name="dialog_unlicensed_title">License not found</string>
    <string name="dialog_unlicensed_body">This copy of AndRovio is not licensed. Use the \"Buy AndRovio\" button to purchase it from the Android Market, or the \"Quit\" button to exit AndRovio now.</string>
    <string name="dialog_unlicensed_buy_button">Buy AndRovio</string>
    <string name="dialog_unlicensed_quit_button">Quit</string>
    <string name="dialog_panic_title">Panic Sent</string>
    <string name="dialog_panic_text">A command has been sent to your Rovio to halt all activity. Whatever it was doing, it should no longer be doing it.</string>
    <string name="dialog_mediaNotMounted_title">Storage Not Available</string>
    <string name="dialog_mediaNotMounted_text">A storage card is required to save snapshots, but was not detected on your device. This could mean there is no storage card inserted, or the card is not writable at the moment.</string>
    <string name="dialog_mediaFull_title">Storage Full</string>
    <string name="dialog_mediaFull_text">There is not enough space on your storage card to continue taking snapshots. To take more snapshots, free up some space, or insert another storage card.</string>
    <string name="error_runpath_title">Path Read Error</string>
    <string name="error_runpath_text">There was a problem reading path data from the Rovio. (Restarting AndRovio while the Rovio is online should fix the problem)</string>
    <string name="alert_runpath_title">Select Path to Run</string>
    <string name="alert_runpath_text">No paths found. (Paths must be recorded with the Rovio web interface before they can be used with AndRovio)</string>
    <string name="alert_sethome_title">Save New Home Position</string>
    <string name="alert_sethome_text">Are you sure you want to save your Rovio\'s current location as the new home position?</string>
    <string name="help_title">AndRovio Help</string>
    <string name="help_return">Press BACK button when finished</string>
    <string name="settings_title">AndRovio Settings</string>
    <string name="preference_radar_title">IR Radar</string>
    <string name="preference_radar_summary">Indicate when the Rovio detects an obstruction</string>
    <string name="preference_brightnessboost_title">亮度设置</string>
    <string name="preference_brightnessboost_summary">Boost the brightness of your Rovio\'s video (no effect on email snapshots)</string>
    <string name="preference_snapshotboost_title">抓图设置</string>
    <string name="preference_snapshotboost_summary">Take snapshots at highest quality and resolution (will cause a delay)</string>
    <string name="preference_snapshottomedia_title">截图保存到SD卡</string>
    <string name="preference_snapshottomedia_summary">Save snapshots on your device instead of emailing from your Rovio</string>
    <string name="preference_showcommands_title">Verbose Commands</string>
    <string name="preference_showcommands_summary">Display the commands sent to your Rovio when buttons are pushed</string>
    <string name="preference_keepscreenon_title">运行时保持屏幕常亮，将会增加耗电</string>
    <string name="preference_keepscreenon_summary">Prevent the screen from sleeping while connected to your Rovio</string>
    <string name="preference_portraitvideozoom_title">Portrait Video Zoom</string>
    <string name="preference_portraitvideozoom_summary">Adjust portrait mode video aspect ratio (results vary by device)</string>
    <string name="preference_portraitvideozoom_dialogtitle">Portrait Video Zoom</string>
    <string name="preference_landscapevideozoom_title">视频放大/缩小比率设置</string>
    <string name="preference_landscapevideozoom_summary">Adjust landscape mode video aspect ratio (results vary by device)</string>
    <string name="preference_landscapevideozoom_dialogtitle">Landscape Video Zoom</string>
    <string name="preference_usealternatenetwork_title">Alternate URL/Port</string>
    <string name="preference_usealternatenetwork_summary">Use the alternate URL and Port defined in Network Settings</string>
    <string name="preference_sectionheader_roviosettings">Rovio Device Settings</string>
    <string name="preference_pagelink_network_title">网络设置</string>
    <string name="preference_pagelink_network_summary">How to connect to your Rovio</string>
    <string name="preference_url_title">URL (required)</string>
    <string name="preference_url_summary">Your Rovio\'s URL (without \"http://\") Example: johndoe.myrovio.com</string>
    <string name="preference_port_title">Port (required)</string>
    <string name="preference_port_summary">The Port number your Rovio is listening on (Usually 8168 or 80)</string>
    <string name="preference_optimize_title">Optimization</string>
    <string name="preference_optimize_summary">Optimize communication based on available bandwidth and CPU speed</string>
    <string name="preference_optimize_dialogtitle">Optimization</string>
    <string name="preference_urlalternate_title">Alternate URL</string>
    <string name="preference_urlalternate_summary">An optional URL to access your Rovio from a different network</string>
    <string name="preference_portalternate_title">Alternate Port</string>
    <string name="preference_portalternate_summary">An optional Port to access your Rovio from a different network</string>
    <string name="preference_optimizealternate_title">Alternate Optimization</string>
    <string name="preference_optimizealternate_summary">Optimize communication based on available bandwidth and CPU speed</string>
    <string name="preference_optimizealternate_dialogtitle">Alternate Optimization</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Your username (if authentication is enabled on your Rovio)</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_password_summary">Your password (if authentication is enabled on your Rovio)</string>
    <string name="preference_pagelink_camera_title">视频设置</string>
    <string name="preference_pagelink_camera_summary">How your Rovio\'s video appears</string>
    <string name="preference_cameravideotype_title">视频类型</string>
    <string name="preference_cameravideotype_summary">Select the type of video stream</string>
    <string name="preference_cameravideotype_dialogtitle">Video Type</string>
    <string name="preference_cameraresolution_title">分辨率</string>
    <string name="preference_cameraresolution_summary">Adjust the video resolution</string>
    <string name="preference_cameraresolution_dialogtitle">Image Resolution</string>
    <string name="preference_cameraquality_title">视频质量</string>
    <string name="preference_cameraquality_summary">Adjust the video compression quality</string>
    <string name="preference_cameraquality_dialogtitle">视频抓图质量</string>
    <string name="preference_camerabrightness_title">视频亮度</string>
    <string name="preference_camerabrightness_summary">Adjust the video brightness</string>
    <string name="preference_camerabrightness_dialogtitle">抓图亮度</string>
    <string name="preference_pagelink_motion_title">Motion Settings</string>
    <string name="preference_pagelink_motion_summary">How your Rovio moves around</string>
</resources>