<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/root" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/status_bar" android:background="@drawable/gradient_top" android:layout_width="match_parent" android:layout_height="26dp">
        <TextView android:textSize="14dp" android:textStyle="bold" android:textColor="@color/statustext_disabled" android:layout_gravity="top" android:id="@+id/stateText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="3dp" android:text="@string/statetext_default" android:shadowColor="@color/background" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"/>
        <ImageView android:layout_gravity="top|right" android:id="@+id/status_radar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="154dp" android:src="@drawable/status_radar_on"/>
        <TextView android:textSize="10dp" android:textStyle="bold" android:layout_gravity="top|right" android:id="@+id/navLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginRight="126dp" android:text="Nav" android:shadowColor="@color/background" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"/>
        <ImageView android:layout_gravity="top|right" android:id="@+id/statusNavView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="102dp" android:src="@drawable/status_signal_disabled"/>
        <TextView android:textSize="10dp" android:textStyle="bold" android:layout_gravity="top|right" android:id="@+id/wifiLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginRight="76dp" android:text="Wifi" android:shadowColor="@color/background" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"/>
        <ImageView android:layout_gravity="top|right" android:id="@+id/statusWifiView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="52dp" android:src="@drawable/status_signal_disabled"/>
        <ImageView android:layout_gravity="top|right" android:id="@+id/statusBatteryView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="2dp" android:src="@drawable/status_battery_disabled"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/video" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <ImageView android:layout_gravity="center" android:id="@+id/camImageView_fullframe" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/solid_black" android:scaleType="fitCenter"/>
        <ImageView android:layout_gravity="center" android:id="@+id/camImageView_crop" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/solid_black" android:scaleType="centerCrop"/>
        <ImageView android:layout_gravity="center" android:id="@+id/camImageView_squeeze" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/solid_black" android:scaleType="fitXY"/>
        <TextView android:textSize="13dp" android:textStyle="bold" android:textColor="@color/screentext_command" android:gravity="center" android:layout_gravity="top|center_horizontal" android:id="@+id/commandText" android:background="@color/screentext_commandbackground" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true"/>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="16dp" android:textStyle="bold" android:textColor="@color/screentext_normal" android:gravity="center" android:id="@+id/welcomeText" android:visibility="gone" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="20dp" android:text="@string/screen_welcome"/>
            <ImageView android:gravity="center" android:id="@+id/rovioPicImageView" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:src="@drawable/image_rovio" android:scaleType="fitCenter"/>
        </LinearLayout>
        <ProgressBar android:layout_gravity="center" android:id="@+id/connectingProgressbar" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginBottom="-90dp" android:indeterminate="true" android:indeterminateBehavior="repeat"/>
        <TextView android:textSize="17dp" android:textStyle="bold" android:textColor="@color/screentext_normal" android:gravity="center" android:layout_gravity="center" android:id="@+id/connectingText" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screen_connecting" android:singleLine="true"/>
        <TextView android:textSize="14dp" android:textStyle="normal" android:textColor="@color/screentext_normal" android:gravity="center" android:layout_gravity="center" android:id="@+id/connectingAddressText" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:singleLine="true"/>
        <ProgressBar android:layout_gravity="center" android:id="@+id/connectFailProgressbar" android:visibility="gone" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginBottom="-90dp" android:indeterminate="true" android:indeterminateBehavior="repeat"/>
        <TextView android:textSize="17dp" android:textStyle="bold" android:textColor="@color/screentext_alert" android:gravity="center" android:layout_gravity="center" android:id="@+id/connectFailHeader" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true"/>
        <TextView android:textSize="14dp" android:textStyle="normal" android:textColor="@color/screentext_alert" android:gravity="center" android:layout_gravity="center" android:id="@+id/connectFailAddress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:singleLine="true"/>
        <TextView android:textSize="14dp" android:textStyle="italic|bold" android:textColor="@color/screentext_alertdescription" android:gravity="center" android:layout_gravity="center" android:id="@+id/connectFailText" android:visibility="gone" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_marginTop="120dp"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/control_pad" android:background="@drawable/gradient_bottom" android:layout_width="match_parent" android:layout_height="192dp">
        <ImageView android:layout_gravity="center" android:id="@+id/dirPadBackgroundView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/background_dirpad_portrait"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/rotateLeft_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-50dp" android:layout_marginBottom="-148dp" android:src="@drawable/button_rotateleft"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/rotateRight_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginBottom="-148dp" android:src="@drawable/button_rotateright"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/forward_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="-64dp" android:src="@drawable/button_forward"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/left_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-78dp" android:src="@drawable/button_left"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/right_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="78dp" android:src="@drawable/button_right"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/reverse_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="64dp" android:src="@drawable/button_reverse"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/left45_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-130dp" android:layout_marginBottom="-122dp" android:src="@drawable/button_left45"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/right45_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="130dp" android:layout_marginBottom="-122dp" android:src="@drawable/button_right45"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/left90_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-186dp" android:src="@drawable/button_left90"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/right90_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="186dp" android:src="@drawable/button_right90"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/left135_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="122dp" android:layout_marginRight="-130dp" android:src="@drawable/button_left135"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/right135_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="130dp" android:layout_marginTop="122dp" android:src="@drawable/button_right135"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/right180_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="168dp" android:src="@drawable/button_right180"/>
        <ImageButton android:layout_gravity="top|left" android:id="@+id/cameraUp_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="3dp" android:src="@drawable/button_cameraup_inactive"/>
        <ImageButton android:layout_gravity="top|left" android:id="@+id/cameraMiddle_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="46dp" android:src="@drawable/button_cameramiddle_inactive"/>
        <ImageButton android:layout_gravity="top|left" android:id="@+id/cameraDown_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginTop="89dp" android:src="@drawable/button_cameradown_inactive"/>
        <ImageButton android:layout_gravity="bottom|left" android:id="@+id/headlight_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginBottom="3dp" android:src="@drawable/button_headlight_off"/>
        <ImageButton android:layout_gravity="top|right" android:id="@+id/setting_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:layout_marginRight="3dp" android:src="@drawable/button_settings"/>
        <ImageButton android:layout_gravity="top|right" android:id="@+id/snapshot_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_marginRight="3dp" android:src="@drawable/button_snapshot"/>
        <ImageButton android:layout_gravity="top|right" android:id="@+id/runPath_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:layout_marginRight="3dp" android:src="@drawable/button_runpath"/>
        <ImageButton android:layout_gravity="bottom|right" android:id="@+id/panic_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:layout_marginBottom="40dp" android:src="@drawable/button_panic"/>
        <ImageButton android:layout_gravity="bottom|right" android:id="@+id/homeDock_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:layout_marginBottom="1dp" android:src="@drawable/button_homedock"/>
    </FrameLayout>
</LinearLayout>
